--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,14 @@
 ---
-# handlers file for ansible_role_zswap
+# can't update grub when running in Molecule
+- name: check if update-grub installed
+  shell: command -v update-grub >/dev/null 2>&1
+  register: update_grub_exist
+  failed_when: no
+  changed_when: no
+  listen: update-grub
+
+- name: update-grub
+  become: yes
+  command: update-grub
+  when: update_grub_exist.rc == 0
+  listen: update-grub
