--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,17 +1,25 @@
 ---
 dependency:
   name: galaxy
+
 driver:
   name: docker
+
 lint:
   name: yamllint
+
 platforms:
-  - name: instance
-    image: centos:7
+  - name: ansible_role_zswap_default
+    image: ubuntu:18.04
+
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
+
+scenario:
+  name: default
+
 verifier:
   name: testinfra
   lint:
