Fixed case of Zswap name in docs
Based on Linux kernel docs.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   role_name: zswap
-  description: Ansible role for configuring ZSWAP.
+  description: Ansible role for configuring Zswap.
   author: John Freeman
   company: GantSign Ltd.
   license: MIT
