--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-# The maximum percentage of RAM to be used for the ZSWAP pool.
+# The maximum percentage of RAM to be used for the Zswap pool.
 zswap_max_pool_percent: 20
