--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,3 +70,21 @@
     backrefs: yes
   notify:
     - update-grub
+
+- name: set accept_threshold_percent (insert)
+  lineinfile:
+    path: '{{ zswap_grubfile }}'
+    regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="((?!.*?zswap\.accept_threshold_percent=[A-z]+).*)"'
+    line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1 zswap.accept_threshold_percent={{ zswap_accept_threshold_percent }}"'
+    backrefs: yes
+  notify:
+    - update-grub
+
+- name: set accept_threshold_percent (update)
+  lineinfile:
+    path: '{{ zswap_grubfile }}'
+    regexp: '^GRUB_CMDLINE_LINUX_DEFAULT="(.*?)zswap\.accept_threshold_percent=[A-z]+(.*?)"'
+    line: 'GRUB_CMDLINE_LINUX_DEFAULT="\1zswap.accept_threshold_percent={{ zswap_accept_threshold_percent }}\2"'
+    backrefs: yes
+  notify:
+    - update-grub
